--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&amp;display=swap" rel="stylesheet"/>
 <style>
-   Campus Conect
+   laman-dasbor
    body {
             background-color: #FF8C00;
             display: flex;
