--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
          left: 65;
         text-align: center; /* Teks tombol berada di tengah */
         display: block; /* Agar tombol berada di bawah elemen lainnya */
-        margin-top: 10px;
+         margin-bottom: 10px;
+        left: 2;
      
     }
 
